--- a/integration-tests/pom.xml
+++ b/integration-tests/pom.xml
@@ -17,7 +17,8 @@
     limitations under the License.
 
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+        xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
     <parent>
@@ -121,6 +122,7 @@
         <module>jfr</module>
         <!--<module>jira</module> https://github.com/apache/camel-quarkus/issues/4524 -->
         <module>jms-artemis-client</module>
+        <module>jms-ibmmq-client</module>
         <module>jms-qpid-amqp-client</module>
         <module>jolt</module>
         <module>joor</module>
