--- a/docs/antora.yml
+++ b/docs/antora.yml
@@ -30,8 +30,8 @@ asciidoc:
     # Project versions
     camel-version: 4.0.0-M3 # replace ${camel.version}
     camel-docs-version: ""
-    quarkus-version: 3.1.0.CR1 # replace ${quarkus.version}
-    graalvm-version: 22.3.0 # replace ${graalvm.version}
+    quarkus-version: 3.1.0.Final # replace ${quarkus.version}
+    graalvm-version: 22.3.2 # replace ${graalvm.version}
     graalvm-docs-version: 22.3
     min-maven-version: 3.8.2 # replace ${min-maven-version}
     target-maven-version: 3.9.1 # replace ${target-maven-version}
