--- a/extensions/nitrite/runtime/pom.xml
+++ b/extensions/nitrite/runtime/pom.xml
@@ -48,6 +48,11 @@
             <groupId>org.apache.camel</groupId>
             <artifactId>camel-nitrite</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.graalvm.sdk</groupId>
+            <artifactId>graal-sdk</artifactId>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
