--- a/extensions/ical/runtime/pom.xml
+++ b/extensions/ical/runtime/pom.xml
@@ -47,6 +47,11 @@
             <groupId>org.apache.camel</groupId>
             <artifactId>camel-ical</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.graalvm.sdk</groupId>
+            <artifactId>graal-sdk</artifactId>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
