--- a/.github/workflows/ci-build.yaml
+++ b/.github/workflows/ci-build.yaml
@@ -272,119 +272,6 @@ jobs:
         run: |
           [[ -z $(git status --porcelain) ]] || { echo 'There are uncommitted changes'; git status; git diff; exit 1; }
 
-  functional-extension-tests:
-    runs-on: ubuntu-latest
-    needs: initial-mvn-install
-    if: github.event_name != 'pull_request' || !contains(github.event.pull_request.labels.*.name, 'JVM')
-    env:
-      MAVEN_OPTS: -Xmx3000m
-    steps:
-      - name: Setup oss-snapshots profile
-        if: github.ref == 'refs/heads/quarkus-main' || github.base_ref == 'quarkus-main'
-        run: |
-          echo "BRANCH_OPTIONS=-Poss-snapshots -Dquarkus.version=999-SNAPSHOT" >> $GITHUB_ENV
-      - name: Checkout
-        uses: actions/checkout@v2
-        with:
-          ref: ${{ env.CHECKOUT_REF }}
-          fetch-depth: 0
-      - name: Set up JDK 17
-        uses: actions/setup-java@v2
-        with:
-          distribution: 'temurin'
-          java-version: '17'
-      - name: Download Maven Repo
-        uses: actions/download-artifact@v2
-        with:
-          name: maven-repo
-          path: ..
-      - name: Extract Maven Repo
-        shell: bash
-        run: |
-          df -h /
-          tar -xzf ../maven-repo.tgz -C ~
-          df -h /
-      - name: cd extensions-core && mvn test
-        run: |
-          cd extensions-core
-          ../mvnw ${CQ_MAVEN_ARGS} ${BRANCH_OPTIONS} \
-            -Dformatter.skip -Dimpsort.skip -Denforcer.skip -Dcamel-quarkus.update-extension-doc-page.skip \
-            test
-      - name: cd extensions && mvn test
-        run: |
-          cd extensions
-          ../mvnw ${CQ_MAVEN_ARGS} ${BRANCH_OPTIONS} \
-            -Dformatter.skip -Dimpsort.skip -Denforcer.skip -Dcamel-quarkus.update-extension-doc-page.skip \
-            test
-      - name: cd test-framework && mvn test
-        run: |
-          cd test-framework
-          ../mvnw ${CQ_MAVEN_ARGS} ${BRANCH_OPTIONS} \
-            -Dformatter.skip -Dimpsort.skip -Denforcer.skip -Dcamel-quarkus.update-extension-doc-page.skip \
-            test
-      - name: cd tooling/perf-regression && mvn verify
-        run: |
-          cd tooling/perf-regression
-          ../../mvnw ${CQ_MAVEN_ARGS} ${BRANCH_OPTIONS} \
-            -Dformatter.skip -Dimpsort.skip -Denforcer.skip \
-            verify
-      - name: cd catalog && mvn test
-        run: |
-          cd catalog
-          ../mvnw ${CQ_MAVEN_ARGS} ${BRANCH_OPTIONS} \
-            -Dformatter.skip -Dimpsort.skip -Denforcer.skip \
-            test
-
-  extensions-jvm-tests:
-    runs-on: ubuntu-latest
-    needs: initial-mvn-install
-    strategy:
-      fail-fast: false
-      matrix:
-        java: [ '17' ]
-    env:
-      MAVEN_OPTS: -Xmx3000m
-    steps:
-      - name: Setup oss-snapshots profile
-        if: github.ref == 'refs/heads/quarkus-main' || github.base_ref == 'quarkus-main'
-        run: |
-          echo "BRANCH_OPTIONS=-Poss-snapshots -Dquarkus.version=999-SNAPSHOT" >> $GITHUB_ENV
-      - name: Checkout
-        uses: actions/checkout@v2
-        with:
-          ref: ${{ env.CHECKOUT_REF }}
-          fetch-depth: 0
-      - name: Set up JDK ${{ matrix.java }}
-        uses: actions/setup-java@v2
-        with:
-          distribution: 'temurin'
-          java-version: ${{ matrix.java }}
-      - name: Download Maven Repo
-        uses: actions/download-artifact@v2
-        with:
-          name: maven-repo
-          path: ..
-      - name: Extract Maven Repo
-        shell: bash
-        run: |
-          df -h /
-          tar -xzf ../maven-repo.tgz -C ~
-          df -h /
-          hostname
-          hostname -f
-          hostname -A
-          HOSTS_LINE="127.0.0.1 $(hostname -f) $(hostname -A)"
-          echo "HOSTS_LINE=$HOSTS_LINE"
-          echo "${HOSTS_LINE}" | sudo tee -a /etc/hosts
-          cat /etc/hosts
-      - name: cd integration-tests-jvm && mvn clean test
-        run: |
-          cd integration-tests-jvm
-          ../mvnw ${CQ_MAVEN_ARGS} ${BRANCH_OPTIONS} \
-            -Dformatter.skip -Dimpsort.skip -Denforcer.skip \
-            --fail-at-end \
-            clean test
-
   integration-tests-alternative-platform:
     runs-on: ${{ matrix.os }}
     needs: initial-mvn-install
@@ -423,53 +310,8 @@ jobs:
       - name: cd integration-tests && mvn clean verify
         shell: bash
         run: |
-          cd integration-tests
-          ../mvnw ${CQ_MAVEN_ARGS} ${BRANCH_OPTIONS} \
+          cd integration-tests/grpc
+          ../../mvnw ${CQ_MAVEN_ARGS} ${BRANCH_OPTIONS} \
             -Dskip-testcontainers-tests -Dformatter.skip -Dimpsort.skip -Denforcer.skip \
             --fail-at-end \
             clean verify
-
-  examples-tests:
-    needs: initial-mvn-install
-    runs-on: ubuntu-latest
-    if: github.event_name != 'pull_request' || !contains(github.event.pull_request.labels.*.name, 'JVM')
-    steps:
-      - name: Setup oss-snapshots profile
-        if: github.ref == 'refs/heads/quarkus-main' || github.base_ref == 'quarkus-main'
-        run: |
-          echo "BRANCH_OPTIONS=-Poss-snapshots -Dquarkus.version=999-SNAPSHOT" >> $GITHUB_ENV
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: Set up JDK 17
-        uses: actions/setup-java@v2
-        with:
-          distribution: 'temurin'
-          java-version: '17'
-      - name: Download Maven Repo
-        uses: actions/download-artifact@v2
-        with:
-          name: maven-repo
-          path: ..
-      - name: Extract Maven Repo
-        shell: bash
-        run: |
-          df -h /
-          tar -xzf ../maven-repo.tgz -C ~
-          df -h /
-      - name: set CQ_VERSION
-        run: echo "CQ_VERSION=$(./mvnw help:evaluate -Dexpression=project.version -q -DforceStdout -N)" >> $GITHUB_ENV
-      - name: clone and verify examples
-        run: |
-          EXAMPLES_BRANCH="camel-quarkus-main"
-
-          if [[ ${GITHUB_REF_NAME} =~ [0-9]+.[0-9]+.x ]]; then
-              EXAMPLES_BRANCH=${GITHUB_REF_NAME}
-          elif [[ ${GITHUB_BASE_REF} =~ [0-9]+.[0-9]+.x ]]; then
-              EXAMPLES_BRANCH=${GITHUB_BASE_REF}
-          fi
-
-          git clone --depth 1 --branch ${EXAMPLES_BRANCH} https://github.com/apache/camel-quarkus-examples.git \
-            && cd camel-quarkus-examples \
-            && echo "Current Examples commit:" $(git rev-parse HEAD) \
-            && mvn ${CQ_MAVEN_ARGS} ${BRANCH_OPTIONS} org.l2x6.cq:cq-maven-plugin:2.10.0:examples-set-platform -Dcq.camel-quarkus.version=${CQ_VERSION} \
-            && ./mvnw-for-each.sh ${CQ_MAVEN_ARGS} ${BRANCH_OPTIONS} -Pnative,docker clean verify
