--- a/integration-test-groups/cxf-soap/pom.xml
+++ b/integration-test-groups/cxf-soap/pom.xml
@@ -41,6 +41,7 @@
         <module>cxf-soap-converter</module>
         <module>cxf-soap-mtom</module>
         <module>cxf-soap-mtom-awt</module>
+        <module>cxf-soap-rest</module>
         <module>cxf-soap-server</module>
         <module>cxf-soap-ssl</module>
         <module>cxf-soap-ws-security-client</module>
